[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "puregome_scripts"
version = "0.0.2"
authors = [
  { name="Erik Tjong Kim Sang", email="e.tjongkimsang@esciencecenter.nl" },
]
description = "Python and bash scripts for the PuReGoMe projects"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache-2.0",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/puregome/scripts"
